# testNTT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
backup/: main.cpp.bak  test_ntt.cpp.bak
depends/: CMakeLists.txt
src/: generate_input.cpp  ntt_test.cpp  polynomial_multiplication.cpp  test_ntt.cpp  utils.cpp  utils.hpp
test/: memo.ipynb  temp.ipynb
test/DRAMSim/: dramsim3.json  dramsim3.txt  example.trace2  testDramSim.cpp
